# hexlet-django-blog

./: .gitignore  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/: article.html
hexlet_django_blog/templates/: base.html
hexlet_django_blog/templates/article/: create.html  form.html  index.html  show.html  update.html
